--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "bun --bun next dev",
+    "build": "bun --bun next build",
+    "start": "bun --bun next start",
+    "lint": "bun --bun next lint",
+    "scrape": "bun run scripts/migrate-content.ts",
+    "extract": "bun run scripts/extract-doc-content.ts",
+    "seed": "bun run scripts/seed-firebase.ts",
+    "set-admin": "bun run scripts/set-admin.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -19,30 +23,44 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tiptap/extension-color": "^2.9.1",
     "@tiptap/extension-list-item": "^2.9.1",
     "@tiptap/extension-text-style": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@uploadthing/react": "7.1.1",
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "4.1.0",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.0",
+    "github-slugger": "^2.0.0",
     "lucide-react": "^0.456.0",
+    "mammoth": "^1.6.0",
     "next": "15.0.3",
+    "next-themes": "0.4.3",
+    "puppeteer": "^22.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
+    "slugify": "^1.6.6",
+    "sonner": "1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "textract": "^2.5.0",
+    "uploadthing": "7.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "bun-types": "1.1.34",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
