--- a/package.json
+++ b/package.json
@@ -14,21 +14,31 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@mistralai/mistralai": "1.3.4",
     "@portabletext/react": "3.1.0",
+    "@radix-ui/react-alert-dialog": "1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tailwindcss/typography": "0.5.15",
     "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/extension-highlight": "2.10.0",
     "@tiptap/extension-list-item": "^2.9.1",
+    "@tiptap/extension-table": "2.10.0",
+    "@tiptap/extension-table-cell": "2.10.0",
+    "@tiptap/extension-table-header": "2.10.0",
+    "@tiptap/extension-table-row": "2.10.0",
     "@tiptap/extension-text-style": "^2.9.1",
+    "@tiptap/extension-typography": "2.10.0",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@uploadthing/react": "7.1.1",
@@ -45,6 +55,7 @@
     "install": "0.13.0",
     "lucide-react": "^0.456.0",
     "mammoth": "^1.6.0",
+    "marked": "15.0.2",
     "next": "15.0.3",
     "next-themes": "0.4.3",
     "puppeteer": "^22.0.0",
@@ -56,6 +67,7 @@
     "react-markdown": "9.0.1",
     "react-masonry-css": "1.0.16",
     "react-multi-carousel": "2.8.5",
+    "rehype-raw": "7.0.0",
     "remark-gfm": "4.0.0",
     "slugify": "^1.6.6",
     "sonner": "1.7.0",
