--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "5.0.2",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.4.0",
     "firebase": "^11.0.2",
@@ -63,6 +64,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropzone": "^14.3.5",
+    "react-firebase-hooks": "5.1.1",
     "react-hook-form": "^7.53.2",
     "react-intersection-observer": "9.13.1",
     "react-markdown": "9.0.1",
