--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tiptap/extension-typography": "2.10.0",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@types/uuid": "10.0.0",
     "@uploadthing/react": "7.1.1",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
@@ -77,6 +78,7 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "7.3.0",
+    "uuid": "11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
