--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "type-check": "tsc --noEmit",
-    "set-admin": "bun run scripts/set-admin.ts"
+    "set-admin": "bun run scripts/set-admin.ts",
+    "seed-partners": "bun run scripts/seed-partners.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -32,6 +33,7 @@
     "@radix-ui/react-toast": "1.2.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tailwindcss/typography": "0.5.15",
+    "@tanstack/react-table": "8.20.5",
     "@tiptap/extension-color": "^2.9.1",
     "@tiptap/extension-highlight": "2.10.0",
     "@tiptap/extension-list-item": "^2.9.1",
