feat: add sticky field to posts and implement sorting for sticky posts in the dashboard

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "components/content-display/HorizontalPostCard"
   ],
   "exclude": [
     "node_modules"
