--- a/package.json
+++ b/package.json
@@ -84,13 +84,14 @@
     "sharp": "0.33.5",
     "slugify": "^1.6.6",
     "sonner": "1.7.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "7.3.0",
     "uuid": "11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "22.10.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -98,9 +99,11 @@
     "dotenv": "16.4.7",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url-loader": "^4.1.1"
   }
 }
