--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "typecheck": "tsc --noEmit",
     "format": "prettier --write .",
+    "prebuild": "pnpm run typecheck",
     "seed-partners": "pnpm tsx scripts/seed-partners.ts",
     "seed-programs": "pnpm tsx scripts/seed-programs.ts",
     "seed-program-offices": "pnpm tsx scripts/seed-program-offices.ts",
@@ -65,6 +68,7 @@
     "framer-motion": "11.11.17",
     "github-slugger": "^2.0.0",
     "install": "0.13.0",
+    "lru-cache": "^11.0.2",
     "lucide-react": "^0.456.0",
     "mammoth": "^1.6.0",
     "marked": "15.0.2",
@@ -91,7 +95,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@portabletext/types": "^2.0.13",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@svgr/webpack": "^8.1.0",
+    "@types/lru-cache": "^7.10.10",
     "@types/node": "22.10.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -105,5 +112,9 @@
     "tsx": "^4.19.2",
     "typescript": "^5",
     "url-loader": "^4.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
   }
 }
