--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,8 +39,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "components/content-display/HorizontalPostCard"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
