--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "file-loader": "^6.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5",
     "url-loader": "^4.1.1"
