--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,5 @@
 {
-    "headers": [
-        {
-            "source": "/:path*",
-            "headers": [
-                {
-                    "key": "Cross-Origin-Opener-Policy",
-                    "value": "same-origin-allow-popups"
-                }
-            ]
-        }
-    ]
+  "buildCommand": "pnpm run build",
+  "installCommand": "pnpm install",
+  "framework": "nextjs"
 }
