--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-checkbox": "1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-progress": "1.1.0",
@@ -73,8 +74,8 @@
     "marked": "15.0.2",
     "next": "15.0.3",
     "next-themes": "0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.3.5",
     "react-firebase-hooks": "5.1.1",
     "react-hook-form": "^7.53.2",
@@ -99,8 +100,8 @@
     "@svgr/webpack": "^8.1.0",
     "@types/lru-cache": "^7.10.10",
     "@types/node": "22.10.1",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "bun-types": "1.1.34",
     "dotenv": "16.4.7",
     "eslint": "^8",
