--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "add-achievements": "pnpm tsx scripts/add-achievements-category.ts",
     "fix-categories": "pnpm tsx scripts/fix-categories.ts",
     "check-categories": "pnpm tsx scripts/check-categories.ts",
-    "cleanup-categories": "pnpm tsx scripts/cleanup-duplicate-categories.ts"
+    "cleanup-categories": "pnpm tsx scripts/cleanup-duplicate-categories.ts",
+    "sync-firebase-types": "pnpm tsx scripts/sync-firebase-types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -63,7 +64,6 @@
     "cookies-next": "5.0.2",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.4.0",
-    "firebase": "^10.7.0",
     "firebase-admin": "^11.11.1",
     "framer-motion": "11.11.17",
     "github-slugger": "^2.0.0",
@@ -74,8 +74,8 @@
     "marked": "15.0.2",
     "next": "15.0.3",
     "next-themes": "0.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-firebase-hooks": "5.1.1",
     "react-hook-form": "^7.53.2",
@@ -95,23 +95,31 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@firebase/analytics-types": "^0.8.3",
+    "@firebase/app-types": "^0.9.3",
+    "@firebase/auth-types": "^0.13.0",
+    "@firebase/firestore-types": "^3.0.3",
+    "@firebase/functions-types": "^0.6.3",
+    "@firebase/storage-types": "^0.8.3",
     "@portabletext/types": "^2.0.13",
     "@radix-ui/react-accordion": "^1.2.3",
     "@svgr/webpack": "^8.1.0",
+    "@types/firebase": "^3.2.3",
     "@types/lru-cache": "^7.10.10",
-    "@types/node": "22.10.1",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "bun-types": "1.1.34",
     "dotenv": "16.4.7",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.1.0",
     "file-loader": "^6.2.0",
+    "firebase": "^10.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5",
+    "typescript": "^5.0.0",
     "url-loader": "^4.1.1"
   },
   "engines": {
