--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -29,9 +29,8 @@
       ]
     },
     "baseUrl": ".",
-    "typeRoots": [
-      "./node_modules/@types",
-      "./app/types"
+    "types": [
+      "node"
     ]
   },
   "include": [
