docs: update instructions for dependency installation and script usage

--- a/functions/package.json
+++ b/functions/package.json
@@ -19,3 +19,15 @@
   },
   "private": true
 }
+
+# Install dependencies
+pnpm install
+
+# Build the functions
+pnpm run build
+
+# Build and start emulators
+pnpm run serve
+
+# Deploy functions
+pnpm run deploy
