--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "sync-firebase-types": "pnpm tsx scripts/sync-firebase-types.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^3.10.0",
     "@mistralai/mistralai": "1.3.4",
     "@portabletext/react": "3.1.0",
     "@radix-ui/react-alert-dialog": "1.1.2",
@@ -64,7 +64,8 @@
     "cookies-next": "5.0.2",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.4.0",
-    "firebase-admin": "^11.11.1",
+    "firebase": "10.6.0",
+    "firebase-admin": "11.11.0",
     "framer-motion": "11.11.17",
     "github-slugger": "^2.0.0",
     "install": "0.13.0",
@@ -78,7 +79,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-firebase-hooks": "5.1.1",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.54.2",
     "react-intersection-observer": "9.13.1",
     "react-markdown": "9.0.1",
     "react-masonry-css": "1.0.16",
@@ -92,7 +93,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "7.3.0",
     "uuid": "11.0.3",
-    "zod": "^3.23.8"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@firebase/analytics-types": "^0.8.3",
