--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sync-firebase-types": "pnpm tsx scripts/sync-firebase-types.ts"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^3.10.0",
     "@mistralai/mistralai": "1.3.4",
     "@portabletext/react": "3.1.0",
