--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "next build",
+  "buildCommand": "pnpm run build",
   "installCommand": "pnpm install",
   "framework": "nextjs",
   "ignoreBuildErrors": true
