--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "downlevelIteration": true,
     "plugins": [
       {
         "name": "next"
@@ -28,9 +24,9 @@
         "./*"
       ]
     },
-    "baseUrl": ".",
-    "types": [
-      "node"
+    "typeRoots": [
+      "./node_modules/@types",
+      "./app/types"
     ]
   },
   "include": [
