--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "cookies-next": "5.0.2",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.4.0",
-    "firebase": "10.6.0",
+    "firebase": "^10.14.1",
     "firebase-admin": "11.11.0",
     "framer-motion": "11.11.17",
     "github-slugger": "^2.0.0",
@@ -110,12 +110,12 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/firebase": "^3.2.1",
     "bun-types": "1.1.34",
     "dotenv": "16.4.7",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.1.0",
     "file-loader": "^6.2.0",
-    "firebase": "^10.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
