--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
@@ -30,14 +26,20 @@
     },
     "typeRoots": [
       "./node_modules/@types",
-      "./",
-      "./app/types"
+      "./types"
+    ],
+    "plugins": [
+      {
+        "name": "next"
+      }
     ]
   },
   "include": [
+    "**/*.d.ts",
+    "**/*.js",
+    "**/*.jsx",
     "**/*.ts",
     "**/*.tsx",
-    "firebase.d.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
