--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-multi-carousel": "2.8.5",
     "rehype-raw": "7.0.0",
     "remark-gfm": "4.0.0",
+    "server-only": "^0.0.1",
     "sharp": "0.33.5",
     "slugify": "^1.6.6",
     "sonner": "1.7.0",
