--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@tiptap/extension-typography": "2.10.0",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@types/nodemailer": "6.4.17",
     "@types/uuid": "10.0.0",
     "@uploadthing/react": "7.1.1",
     "axios": "^1.6.7",
@@ -76,6 +77,7 @@
     "marked": "15.0.2",
     "next": "15.0.3",
     "next-themes": "0.4.3",
+    "nodemailer": "6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
